<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PanicTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_test_page">TestPage</string>
    <string name="title_activity_create_room">CreateRoom</string>
    <string name="room_name">Room Name</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="create_room">Create Room</string>
    <string name="title_activity_room_create_success">RoomCreateSuccess</string>
    <string name="room_create_success">Room Created Successfully</string>
    <string name="welcome">Welcome</string>
    <string name="blank"></string>
    <string name="title_activity_new_user">NewUser</string>
    <string name="title_activity_change_user">ChangeUser</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="join_room">Join Room</string>
    <string name="title_activity_join_room">JoinRoom</string>
    <string name="joinRoom">Join Room</string>
    <string name="roomName">Room Name</string>
    <string name="JoinARoom">Join A Room</string>
    <string name="title_activity_panic_page">PanicPage</string>
    <string name="WelcomeTo">Welcome To Room</string>
    <string name="title_activity_join_room_failed">JoinRoomFailed</string>
    <string name="FailedToJoinRoom">Failed to Join Room:</string>
    <string name="FailedToJoinRoom2">Failed to join room. Room name does not exist.</string>
    <string name="Percent">--/100 (Percent)</string>
    <string name="Threshold">Threshold</string>
    <string name="RoomInfo">Room Info</string>
    <string name="NumberStudents"># Students</string>
    <string name="title_activity_threshold_hit">ThresholdHit</string>
    <string name="ThresholdHit">Threshold Hit</string>
    <string name="Panic">PANIC</string>
    <string name="PANIC">PANIC!</string>
    <string name="WelcomeToHoldThePhone">Welcome to Hold the Phone</string>
    <string name="toHoldThePhone">to Hold the Phone</string>
    <string name="joinRoomInfo">Room name must be exact</string>

</resources>