<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/welcome"
        android:layout_below="@+id/welcome"
        android:text="@string/blank"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/changeUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/blank"
        android:onClick="changeUser"
         />

    

    <Button
        android:id="@+id/joinRoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user"
        android:layout_below="@+id/user"
        android:layout_marginTop="38dp"
        android:onClick="joinRoom"
        android:text="@string/JoinARoom" />

    <Button
        android:id="@+id/createRoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/joinRoomButton"
        android:layout_below="@+id/joinRoomButton"
        android:layout_marginTop="18dp"
        android:onClick="createRoom"
        android:text="@string/create_room" />

</RelativeLayout>