<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateRoom" >

    <EditText
        android:id="@+id/createRoomName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/room_name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/createRoomPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/createRoomName"
        android:layout_below="@+id/createRoomName"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/createRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/createRoomPassword"
        android:layout_centerVertical="true"
        android:text="@string/create" 
        android:onClick="confirmCreateRoom"/>

</RelativeLayout>